--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -18,7 +18,7 @@
 
             <my-side-menu-content></my-side-menu-content>
 
-            <ion-footer-bar ng-if="showNewsFeed == true" class="newsFeed-horizontal-scroll">
+            <ion-footer-bar class="newsFeed-horizontal-scroll">
                 <marquee behavior="scroll" direction="left" scrollamount="3">
                     {{newsFeed}}
                 </marquee>
