--- a/www/templates/my-tabs-content.html
+++ b/www/templates/my-tabs-content.html
@@ -27,10 +27,14 @@
                  ng-repeat="record in filteredResult[0]">
                 <div class="col">
                     <div class="row">
-                        {{record.HomeTeam}}
+                        <div class="col">
+                            {{record.HomeTeam}}
+                        </div>
                     </div>
                     <div class="row">
-                        {{record.AwayTeam}}
+                        <div class="col">
+                            {{record.AwayTeam}}
+                        </div>
                     </div>
                 </div>
                 <div class="col">
