--- a/www/templates/my-side-menu-content.html
+++ b/www/templates/my-side-menu-content.html
@@ -15,29 +15,36 @@
                </a>
            </div>
 
-           <div class="tabs topHeader bottomHeader">
-               <button class="button my-select-button" ng-click="openPopup('popWin')">{{urlArgs.winType}}
-                   <span class="badge badge-assertive" >{{filteredResult[0].length + filteredResult[1].length}}</span>
-                   <span class="badge badge-assertive" ng-if="filteredResult[0].length + filteredResult[1].length == undefined">0</span>
-               </button>
+           <div class="tabs topHeader bottomHeader" style="padding:0px">
+               <div class="row" style="padding:0px">
+                   <div class="col" style="text-align: center;">
+                       <button class="button my-select-button " style="width:100%"
+                           ng-click="openPopup('popWin')">{{urlArgs.winType}}
+                       <span class="badge badge-assertive" >{{filteredResult[0].length + filteredResult[1].length}}</span>
+                       <span class="badge badge-assertive" ng-if="filteredResult[0].length + filteredResult[1].length == undefined">0</span>
+                       </button>
+                   </div>
 
 
-               <button class="button button-small option option-star" style="border-left: 2px solid #0F7FA3 !important;"
-                       ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star' }"
-                       ng-click="starSelect('4 Star')">4 Star<br/>Tips
-                   <!--<i class="icon ion-android-lock" ng-if="urlArgs.star == '5 Star'"></i>-->
-                   <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star'">{{filteredResult[0].length}}</span>-->
-                   <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star' && filteredResult[0].length == undefined">0</span>-->
-               </button>
+                   <div class="col" style="padding: 0px; display:inline-block;">
+                       <button class="button button-small option option-star" style="float:left; margin-top:17px; min-width:70px !important "
+                               ng-class="{'option-star-active': urlArgs.star == '4 Star', 'option-star-passive': urlArgs.star != '4 Star' }"
+                               ng-click="starSelect('4 Star')">4 Star<br/>Tips
+                           <!--<i class="icon ion-android-lock" ng-if="urlArgs.star == '5 Star'"></i>-->
+                           <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star'">{{filteredResult[0].length}}</span>-->
+                           <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star' && filteredResult[0].length == undefined">0</span>-->
+                       </button>
 
-               <button class="button button-small option option-star"
-                       ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star' }"
-                       ng-click="starSelect('5 Star')">
-                   <span>5 Star<br/>Tips</span>
-                   <!--<span ng-if="purchase['5startips'].value == false"><i class="icon ion-android-lock"></i></span>-->
-                   <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star'">{{filteredResult[1].length}}</span>-->
-                   <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star' && filteredResult[1].length == undefined">0</span>-->
-               </button>
+                       <button class="button button-small option option-star" style="float:left; margin-top:17px; min-width: 70px !important; "
+                               ng-class="{'option-star-active': urlArgs.star == '5 Star', 'option-star-passive': urlArgs.star != '5 Star' }"
+                               ng-click="starSelect('5 Star')">
+                           <span>5 Star<br/>Tips</span>
+                           <!--<span ng-if="purchase['5startips'].value == false"><i class="icon ion-android-lock"></i></span>-->
+                           <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star'">{{filteredResult[1].length}}</span>-->
+                           <!--<span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star' && filteredResult[1].length == undefined">0</span>-->
+                       </button>
+                   </div>
+               </div>
 
                <!--<select ng-model="urlArgs.winType">-->
                    <!--<option value="Home Wins">Home Wins-->
@@ -138,7 +145,7 @@
             <span></span>
         </button>
         </div>
-        <div class="tabs topHeader bottomHeader2">
+        <div class="tabs topHeader bottomHeader2" style="text-align:center;">
             <button class="button button-small option" style="border-left: 2px solid #0F7FA3 !important;"
                     ng-class="{'option-active': urlArgs.statsType == 'Main Table', 'option-passive': urlArgs.statsType != 'Main Table' }"
                     ng-click="getStats('Main Table');">Main<br/>Table</button>
@@ -200,10 +207,10 @@
 <ion-content class="has-header" ng-class="{'has-footer': showNewsFeed == true}">
     <div ng-if="sideMenuOptions['Horse Racing Tips'] && chooseLeagueStatsBool == false">
         <div ng-if="stock[0] == ''  && internet != false" class="row">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>
+            <h4 style="color:#2A3A49; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>
         </div>
         <div ng-if="internet == false" class="row">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
+            <h4 style="color:#2A3A49; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
         </div>
         <div ng-repeat="st in stock[0]" class="row newsFeed">
             <div class="col">{{st.Name}}</div>
@@ -214,10 +221,10 @@
 
     <div ng-if="chooseLeagueStatsBool == false && (sideMenuOptions['NFL Tips'] || sideMenuOptions['Cricket Tips'] || sideMenuOptions['Boxing Tips']  || sideMenuOptions['Tennis Tips'])">
         <div ng-if="stock[0] == '' && internet != false" class="row ">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>
+            <h4 style="color:#2A3A49; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>
         </div>
         <div ng-if="internet == false" class="row">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
+            <h4 style="color:#2A3A49; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
         </div>
         <div ng-repeat="st in stock[0]" class="row newsFeed"
              ng-class-even="'listEven'" ng-class-odd="'listOdd'">
