--- a/www/templates/choose-league-stats.html
+++ b/www/templates/choose-league-stats.html
@@ -1,5 +1,5 @@
 <div class="list list-inset" style="top: 43px; margin: 0px">
-    <label class="item item-input">
+    <label class="item item-input" style=" background-color: #2A3A49">
         <i class="icon ion-search placeholder-icon"></i>
         <input type="text" ng-model="leagueSearch.value" placeholder="Search" style="color:white">
     </label>
