--- a/www/templates/choose-league.html
+++ b/www/templates/choose-league.html
@@ -6,10 +6,10 @@
     </div>
 </div>
 
-<div class="list list-inset" style="margin: 0px; top:112px">
-    <label class="item item-input">
+<div class="list list-inset" style="margin: 0px; top:112px;">
+    <label class="item item-input" style=" background-color: #2A3A49">
         <i class="icon ion-search placeholder-icon"></i>
-        <input type="text" ng-model="leagueSearch.value" placeholder="Search" style="color:white">
+        <input type="text" ng-model="leagueSearch.value" placeholder="Search" style="color:white; ">
     </label>
 </div>
 
